--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 			<h1 class="logo-text">Pet Store</h1>
 		</div>
 		<ul class="nav nav-pills pull-right">
-		  <li role="presentation"><a href="#">Home</a></li> 
+		  <li role="presentation"><a href="#">Home</a></li> <!--removed action class acitve to remove styles in nav-->
 		  <li role="presentation"><a href="#">Products</a></li>
 		  <li role="presentation"><a href="#">Contact Us</a></li>
 		</ul>
 	</header>
+	<div class="containter-fluid hero">
+		<p class="text-center white-text text-uppercase">the products they love.the prices you like.</p>
+	</div>
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
