--- a/index.html
+++ b/index.html
@@ -10,19 +10,84 @@
 </head>
 <body>
 	<header class="container">
-		<div class="pull-left">
-			<img src="img/petstore_logo.png" alt="pet store logo" class="img-responsive logo-img">
-			<h1 class="logo-text">Pet Store</h1>
+			<div class="flex">
+				<div class="flex">
+					<img src="img/petstore_logo.png" alt="pet store logo" class="img-responsive logo-img">
+					<h1 class="logo-text">Pet Store</h1>
+				</div>
+				<ul class="nav nav-pills pull-right">
+				  <li role="presentation"><a href="#">Home</a></li> <!--removed action class acitve to remove styles in nav-->
+				  <li role="presentation"><a href="#">Products</a></li>
+				  <li role="presentation"><a href="#">Contact Us</a></li>
+				</ul>
 		</div>
-		<ul class="nav nav-pills pull-right">
-		  <li role="presentation"><a href="#">Home</a></li> <!--removed action class acitve to remove styles in nav-->
-		  <li role="presentation"><a href="#">Products</a></li>
-		  <li role="presentation"><a href="#">Contact Us</a></li>
-		</ul>
 	</header>
 	<div class="containter-fluid hero">
 		<p class="text-center white-text text-uppercase">the products they love.the prices you like.</p>
 	</div>
+	<!-- Featured and Services sections begins -->
+<div class="container">
+	<div class="row">
+		<div class="col-sm-7"> <!--Featured Section begins-->
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="h1 text-uppercase">Featured</div>
+					<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est alias repellendus laborum maxime amet, nam. Delectus beatae minus aperiam atque saepe ullam eveniet modi praesentium mollitia, corporis, nostrum porro ipsum!</p>
+				</div>
+			</div>
+			<div class="row"> <!-- Products thumbnails begin-->
+				<div class="col-xs-6 col-sm-4">
+					<!-- Product 1 begins -->
+				    <div class="thumbnail well">
+				      <img src="img/product1.jpg" alt="...">
+				      <div class="caption">
+				        <h3>Thumbnail label</h3>
+				        <p>...</p>
+				        <p><a href="#" class="btn btn-info btn-xs" role="button">Button</a></p>
+				      </div>
+				    </div>
+						<!-- Product 1 ends -->
+					</div>
+				<div class="col-xs-6 col-sm-4">
+					<!-- Product 2 begins -->
+				    <div class="thumbnail well">
+				      <img src="img/product2.jpg" alt="...">
+				      <div class="caption">
+				        <h3>Thumbnail label</h3>
+				        <p>...</p>
+				        <p><a href="#" class="btn btn-info btn-xs" role="button">Button</a></p>
+				      </div>
+				    </div>
+					<!-- Product 2 ends  -->
+				</div>
+				<div class="col-xs-6 col-sm-4">
+					<!-- Product 3 begins -->
+				    <div class="thumbnail well">
+				      <img src="img/product3.jpg" alt="...">
+				      <div class="caption">
+				        <h3>Thumbnail label</h3>
+				        <p>...</p>
+				        <p><a href="#" class="btn btn-info btn-xs" role="button">Button</a></p>
+				      </div>
+				    </div>
+					<!-- Product 3 ends -->
+				</div>
+			</div> <!--Products thumbnails end-->
+		</div> <!-- Featured sections ends-->
+		<div class="col-sm-3 col-sm-offset-1 text-center">
+			<h1 class="text-uppercase">services</h1>
+			<ul class="nav nav-pills nav-stacked">
+		  <li role="presentation"><a href="#" class="text-uppercase">Adopt A Cat</a></li>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		  <li role="presentation"><a href="#" class="text-uppercase">Adopt A Dog</a></li>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		  <li role="presentation"><a href="#" class="text-uppercase">Adopt A Fish</a></li>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</ul>
+		</div> <!--Services sectio begins-->
+	</div> <!--Services sectins ends-->
+</div>
+	<!--- Featured and Services section ends ---->
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
