added contact and styles

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 	</div> <!--Services sectins ends-->
 </div>
 	<!--- Featured and Services section ends ---->
+
+	<!------- Footer Begins-------- -->
+<footer>
+
+	
+</footer>
+
+	<!------- Footer Ends --------- -->
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
